# simplemeca-flask

./: .gitignore  Dockerfile  LICENSE  Makefile  Pipfile  Pipfile.tmpl  README.md  docker-compose.yml  fly.toml  heroku.yml  local_gui_test.bash  pyproject.toml  run_simplemeca.py  simplemeca.py  test.sh
.github/workflows/: deploy-to-fly-io.yml
data/: example_payload.json
simplemeca_flask/: public_config.json  simplemeca.py
simplemeca_flask/static/: swagger_manualgen.json
test/: local_gui_test.bash  local_gui_test.ps1
