[tool.poetry]
name = "simplemeca-flask"
version = "1.2.0"
description = "Simple Focal Mechanism Generator based on PyGMT"
authors = ["Sean Ho <sean.li.shin.ho@gmail.com>"]
license = "MIT"
readme = "README.md"
packages = [{include = "simplemeca_flask"}]

[tool.poetry.dependencies]
python = "^3.8"
pygmt = "^0.7.0"
Flask = "^2.1.2"
Flask-Cors = "^3.0.10"
gunicorn = "^20.1.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
