[tool.poetry]
name = "simplemeca-flask"
version = "1.2.0"
description = "Simple Focal Mechanism Generator based on PyGMT"
authors = ["Sean Ho <sean.li.shin.ho@gmail.com>"]
license = "MIT"
readme = "README.md"
packages = [{include = "simplemeca_flask"}]

[tool.poetry.dependencies]
python = "^3.9"
pygmt = "^0.10.0"
Flask = "^3.0.0"
Flask-Cors = "^4.0.0"
gunicorn = "^21.2.0"
poetryup = "^0.12.7"
setuptools = "^68.2.2"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
