[tool.poetry]
name = "simplemeca-flask"
version = "1.2.0"
description = "Simple Focal Mechanism Generator based on PyGMT"
authors = ["Sean Ho <sean.li.shin.ho@gmail.com>"]
license = "MIT"
readme = "README.md"
packages = [{include = "simplemeca_flask"}]

[tool.poetry.dependencies]
python = "^3.11"
pygmt = "^0.16.0"
Flask = "^3.1.1"
Flask-Cors = "^6.0.1"
gunicorn = "^23.0.0"
setuptools = "^80.0.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
